grafana/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: grafana
  labels:
    app.kubernetes.io/instance: traefik-networking
    app.kubernetes.io/name: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.jevn.sex`)
      priority: 10
      services:
        - name: grafana
          port: 80
  tls:
    certResolver: porkbun
